tests/invalid/invalid_subscript.lang
fn main() {
    var a: i32 = 123;
    var b: i32 = a[0];
}
